ci: test install 7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install pnpm
       uses: pnpm/action-setup@v2.2.2
       with:
-        version: next-7
+        version: 7
     - name: Setup Node
       uses: actions/setup-node@v2
       with:
